# telemodel

./: .gitignore  README.md
src/: CMakeLists.txt
src/aux/: CMakeLists.txt  array_alloc.f90  aux_dds.f90
src/classes/: CMakeLists.txt  aux_file_class.f90  base_block_class.f90  cic_interp.f90  comb.f90  dds.f90  delay.f90  file_reader_class.f90  file_writer_class.f90  integrator.f90  sample.f90
src/general/: CMakeLists.txt  ModuleWriteReadArrayFromToFile.f90
src/tests/: CMakeLists.txt  test_cic_interp.f90  test_comb.f90  test_dds.f90  test_delay.f90  test_integrator.f90  test_read_write.f90  test_sample_class.f90  test_sample_reader.f90  test_sample_writer.f90
